# distribute-metal

./: .env.example  .gitignore  DistributeMetal.entitlements  LICENSE  README.md  cursorinstructions.md
.cursor/: mcp.json
.cursor/rules/: distribute-metal-yaml.mdc
agent/: pyproject.toml
agent/src/distribute_metal_agent/: __init__.py  auth.py  bench.py  cli.py  models.py  rsync_guard.py  runner.py  server.py  ssh_setup.py  sysinfo.py  workspace.py
agent/tests/: test_rsync_guard.py  test_runner_paths.py
apps/DistributeMetal/: Info.plist  Package.swift
apps/DistributeMetal/App/: AppDelegate.swift  DistributeMetalApp.swift
apps/DistributeMetal/Models/: AgentAPI.swift  Job.swift  Peer.swift
apps/DistributeMetal/Services/: AgentClient.swift  AgentProcessService.swift  DiscoveryService.swift  JobOrchestrator.swift  RsyncService.swift  SSHService.swift
apps/DistributeMetal/Utilities/: NetworkUtils.swift  YAMLGenerator.swift  YAMLLiteDecode.swift
apps/DistributeMetal/Views/: AddPeerSheet.swift  JobStatusView.swift  MenuBarView.swift  PeerRow.swift
examples/mccl_ddp_train/: distribute-metal.yaml  pyproject.toml
examples/mccl_ddp_train/configs/: train.yaml
examples/mccl_ddp_train/src/: train.py
examples/vae_mnist/: pyproject.toml
examples/vae_mnist/src/: train.py
mcp/distribute-metal-mcp/: pyproject.toml
mcp/distribute-metal-mcp/src/distribute_metal_mcp/: __init__.py  cluster_client.py  server.py  yaml_generator.py
schemas/: distribute-metal.v1.yaml
scripts/: build-app.sh  build-release.sh  release.sh
