[project]
name = "distribute-metal-agent"
version = "0.1.0"
description = "Worker agent for measured.one.distribute-metal — provisions environments and runs torchrun on Apple Silicon"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pyyaml>=6.0",
]

[project.scripts]
distribute-metal-agent = "distribute_metal_agent.server:main"
distribute-metal = "distribute_metal_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/distribute_metal_agent"]
